[project]
name = "ascii-announcers"
version = "0.0.1"
authors = [
  { name="wagjo", email="wagjo@wagjo.com" },
]
description = "ASCII announcers for cowsay like announcements"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/wagjo/ascii-announcers"
Issues = "https://github.com/wagjo/ascii-announcers/issues"
