[project]
name = "ascii-announcers"
version = "0.0.2"
authors = [
  { name="wagjo", email="wagjo@wagjo.com" },
]
description = "ASCII announcers for cowsay like announcements"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
deploy= ["twine", "build"]

[project.urls]
Homepage = "https://github.com/wagjo/ascii-announcers"
Issues = "https://github.com/wagjo/ascii-announcers/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
